[tool.poetry]
name = "pyneko"
version = "0.1.0"
description = ""
authors = ["lyem <rfael403@gmail.com>"]
readme = "README.md"
packages = [{ include = "scripts/*" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
undetected-chromedriver = "^3.5.5"
nodriver = "^0.29rc2"
pillow = "^10.3.0"
fake-useragent = "^1.5.1"
beautifulsoup4 = "^4.12.3"
pyqt6 = "^6.7.0"
platformdirs = "^4.2.2"
tldextract = "^5.1.2"
clipman = "^3.2.3"
pillow-avif-plugin = "^1.4.3"
dulwich = "^0.22.1"
cloudscraper = "^1.2.71"
opencv-python-headless = "^4.10.0.84"
cryptography = "^43.0.3"
cairosvg = "^2.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pyinstaller = "^6.7.0"
jinja2 = "^3.1.4"
jurigged = "^0.6.0"

[tool.poetry.scripts]
clean = "scripts.remove_cache:remove_cache_folders"
start = "scripts.start:run"
build = "scripts.build:install"
new = "scripts.template:generate"
